force-app/main/default/objects/Claim__c/fields/Gift__c.field-meta.xml
<CustomField>
    <fullName>Gift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gift</label>
    <referenceTo>Gift__c</referenceTo>
    <relationshipLabel>Claim</relationshipLabel>
    <relationshipName>Claim</relationshipName>
    <type>Lookup</type>
</CustomField>