force-app/main/default/objects/Claim__c/fields/Quantity_Claimed__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Claimed__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Quantity Claimed</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>