force-app/main/default/objects/Claim__c/fields/Station__c.field-meta.xml
<CustomField>
    <fullName>Station__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>Station__c</referenceTo>
    <relationshipLabel>Claim</relationshipLabel>
    <relationshipName>Claim</relationshipName>
    <type>Lookup</type>
</CustomField>